--- a/src/main/resources/assets/soviet/lang/zh_cn.lang
+++ b/src/main/resources/assets/soviet/lang/zh_cn.lang
@@ -264,9 +264,9 @@ tile.contact_wire_angle.name=电车线
 tile.nii_glass_2.name=绿色塔拉摩萨拉达瓷砖
 tile.windproof_beton.name=防风屏
 tile.ug_rail.name=铁轨
-tile.ug_rail_rot.name=Metrorails (右1)
-tile.ug_rail_rot2.name=Metrorails (右2)
-tile.ug_rail_rot3.name=Metrorails (左1)
+tile.ug_rail_rot.name=铁轨 (右1)
+tile.ug_rail_rot2.name=铁轨 (右2)
+tile.ug_rail_rot3.name=铁轨 (左1)
 tile.ug_rail_rot4.name=铁轨 (左2)
 tile.ug_rail_diag.name=铁轨
 tile.light_bricks.name=墙砖
