--- a/src/main/resources/assets/soviet/lang/zh_cn.lang
+++ b/src/main/resources/assets/soviet/lang/zh_cn.lang
@@ -309,7 +309,7 @@ tile.hermoblock.name=garmestani单元
 tile.parket_left.name=硬木地板
 tile.parket_right.name=硬木地板
 tile.parket_line.name=硬木地板
-tile.parket_line2.name=H硬木地板
+tile.parket_line2.name=硬木地板
 tile.nii_wall_1_crack.name=旧石灰华砖
 tile.light_bricks2.name=墙砖
 tile.light_bricks2_crack.name=破裂墙砖
