--- a/src/main/resources/assets/soviet/lang/zh_cn.lang
+++ b/src/main/resources/assets/soviet/lang/zh_cn.lang
@@ -189,7 +189,7 @@ tile.nii_glass_1.name=蓝色塔拉摩萨拉达瓷砖
 tile.electro_board.name=保险丝盒
 tile.soviet_bricks_with_white.name=镶白砖块
 tile.lab_table_center.name=实验台
-tile.po2_down.name=BY-2栅栏
+tile.po2_down.name=PO-2混凝土墙
 tile.lab_tile.name=蓝色马赛克瓷砖
 tile.lab_tile2.name=红色马赛克瓷砖
 tile.glazed_tile_black.name=瓷砖
@@ -201,7 +201,7 @@ glazed_tile_black_cracked_color=§8黑色
 glazed_tile_black_type=矩形
 glazed_tile_black_cracked_type=矩形，破损的
 tile.lino1.name=苏维埃油毡1
-tile.po2_up.name=BY-2栅栏
+tile.po2_up.name=PO-2混凝土墙
 tile.barb_wire.name=带刺铁丝网
 tile.kafels.kafel_7.name=花纹瓷砖
 item.ralling_door_item.name=生锈横闩门
@@ -232,7 +232,7 @@ tile.street_light_down_1.name=路灯基座
 tile.street_light_down_2.name=路灯基座
 tile.street_light_middle.name=灯柱
 item.item_dsp_panel_1.name=橡木板
-tile.base_po2.name=BY-2栅栏基座
+tile.base_po2.name=PO-2混凝土墙基
 tile.soviet_chair_wood.name=木椅
 tile.soviet_tumb.name=小床头柜
 tile.travertine_block.name=石灰华块
