--- a/src/main/resources/assets/soviet/lang/zh_cn.lang
+++ b/src/main/resources/assets/soviet/lang/zh_cn.lang
@@ -239,12 +239,12 @@ tile.travertine_block.name=石灰华块
 tile.soviet_bed.name=铁板床
 tile.closed_sovietlamp.name=关闭的卤素灯
 tile.closed_sovietlamptrue.name=关闭的卤素灯
-tile.panel_block.name=面板组件
-tile.panel_block_rot.name=磨损面板组件
-tile.panel_block_ang.name=边角面板组件
-tile.beton_panel.name=预制板搭建的混凝土
-tile.beton_panel_rot.name=磨损混凝土面板
-tile.beton_panel_ang.name=边角混凝土面板
+tile.panel_block.name=预制板块
+tile.panel_block_rot.name=磨损预制板块
+tile.panel_block_ang.name=边角预制板块
+tile.beton_panel.name=预制板混凝土砌块
+tile.beton_panel_rot.name=磨损混凝土砌块
+tile.beton_panel_ang.name=边角混凝土砌块
 tile.factory_window.name=工厂窗户
 item.alm_door_item.name=铝门
 tile.lino2.name=苏维埃油毡2
@@ -278,7 +278,7 @@ tile.small_tiles_yellow_cracked.name=破损黄色小正方形瓷砖
 tile.small_tiles_yellow.name=黄色小正方形瓷砖
 tile.rusty_iron_door.name=生锈铁门
 item.rusty_iron_door_item.name=生锈铁门
-tile.red_bricks.name=红砖快
+tile.red_bricks.name=红砖块
 tile.ye_bricks_1_crack.name=破裂石灰砖1
 tile.ye_bricks_2_crack.name=破裂石灰砖2
 tile.ye_bricks_3_crack.name=破裂石灰砖3
