Edit according to ru_ru.lang

--- a/src/main/resources/assets/soviet/lang/zh_cn.lang
+++ b/src/main/resources/assets/soviet/lang/zh_cn.lang
@@ -112,7 +112,7 @@ tile.tableside.name=床头柜
 tile.soviet_box.name=箱子
 tile.lift_down.name=电梯
 tile.lift_up.name=电梯
-tile.mega_lamp.name=巨大聚光灯"朱庇特"
+tile.mega_lamp.name=苏联探照灯
 tile.floor_grid.name=钢制网格地板
 tile.raw_beton.name=未加工混凝土
 item.quad_tile.name=方形瓷砖片
@@ -144,8 +144,8 @@ item.quadtile.name=方形瓷砖片
 item.white_brick.name=白砖
 item.hammer.name=锤子
 item.andesite_rock.name=安山岩片
-tile.po_2.name=BY-2栅栏
-tile.fantom_block.name=幽灵方块
+tile.po_2.name=PO-2混凝土墙
+tile.fantom_block.name=幻象方块
 tile.nii_wall_1.name=石灰华瓷砖
 tile.nii_blocks.nii_wall_2.name=瓷质砖
 tile.nii_blocks.nii_wall_3.name=石灰华砖块
@@ -221,8 +221,8 @@ tile.modern_window.name=实验室窗户
 tile.modern_window_leaf.name=实验室升降窗
 tile.brown_tile.name=褐色砖
 tile.brown_tile_crack.name=破裂褐色砖
-tile.vibro_wire.name=继电器
-tile.vibro_wire_b.name=双路继电器
+tile.vibro_wire.name=应力线
+tile.vibro_wire_b.name=双路应力线
 tile.beton_wall.name=混凝土墙
 tile.street_light_false.name=生锈路灯
 tile.street_light_true.name=生锈路灯
