--- a/src/main/resources/assets/soviet/lang/zh_cn.lang
+++ b/src/main/resources/assets/soviet/lang/zh_cn.lang
@@ -355,7 +355,7 @@ tile.physical/accl_stand.name=加速器垫座
 tile.physical/copper_rings.name=电磁线圈
 tile.physical/copper_rings_end.name=悬挂式电磁线圈
 tile.physical/lead_wall.name=厚铅混凝土墙
-tile.physical/thin_lead_wall.name=薄铅墙
+tile.physical/thin_lead_wall.name=薄铅混凝土墙
 tile.physical/spec_monitor.name=全格式显示器
 tile.physical/ameter.name=电流表
 tile.physical/pmeter.name=电位仪
