--- a/src/main/resources/assets/soviet/lang/en_us.lang
+++ b/src/main/resources/assets/soviet/lang/en_us.lang
@@ -326,7 +326,7 @@ tile.sh.name=Symbol:"Ш"
 tile.ue.name=Symbol:"Э"
 tile.d.name=Symbol:"Д"
 tile.uy.name=Symbol:"Ю"
-tile.e.name=Symbol:"Ы"
+tile.e.name=Symbol:"Е"
 tile.ch.name=Symbol:"Ш"
 tile.b.name=Symbol:"Б"
 tile.c.name=Symbol:"Ц"
@@ -372,3 +372,43 @@ tile.physical/accl_lamp_cracked.name=Broken Accel Lamp
 tile.physical/oscilloscope.name=Oscilloscope
 tile.physical/autowriter.name=Auto Writer
 tile.physical/accl_tile.name=Lead-Ceramic kafel tile
+tile.req/tubing.name=Horizontal tubing
+tile.req/v_tubing.name=Vertical tubing
+tile.bio/vent_pipe2.name=Ventilation tube
+tile.bio/vent_pipe2_base.name=Microbiological Hood
+tile.req/short_bricks.name=Light bricks
+tile.bio/horiz_tile_blue.name=Horizontal blue tile
+tile.bio/horiz_tile_blue_crack.name=Horizontal blue tile cracked
+tile.bio/horiz_tile_white.name=Horizontal white tile
+tile.brown_tilled_block.name=Brown tile
+tile.linos.lino1.name=Lino with a pattern №1
+tile.linos.lino3.name=Lino with a pattern №2
+tile.linos.lino2.name=Red lino
+tile.linos.lino4.name=Turquoise lino
+tile.linos.lino5.name=Brown lino
+tile.linos.lino6.name=Blue lino
+tile.linos.lino7.name=Gray-white lino
+tile.linos.lino8.name=Green lino
+tile.bio/bio_stil.name=Rack for culture
+tile.bio/cryocapsule.name=Sealed cryostorage
+tile.bio/rotamixer.name=Rotamixer
+tile.bio/lab_sink.name=Microbiological sink
+tile.bio/biolab_table2.name=Microbiology table with blue coating
+tile.bio/biolab_table3.name=Microbiological table with stainless steel coating
+tile.bio/biolab_table4.name=Microbiological table drawer
+tile.bio/biolab_chair.name=Laboratory Chair
+tile.bio/biolab_tumbler.name=Power Switch
+tile.bio/biolab_power_socket.name=Power Socket
+tile.bio/radiator.name=Cooling Radiator
+tile.bio/autoclave2.name=Laboratory Autoclave
+tile.bio/chain.name=Chain
+tile.bio/dress_room_down.name=Dividing changing room
+tile.bio/dress_room_up.name=Dividing changing room
+tile.bio/vent_circle.name=General laboratory ventilation
+tile.bio/vent_filter.name=Microbiological ventilation with filter
+tile.bio/diff_lamp.name=Laboratory lamp with diffuser
+tile.bio/diff_lamp_true.name=Laboratory lamp with diffuser
+tile.betons.red_beton.name=Red Concrete
+tile.betons.red_beton_crack.name=Peeling Red Concrete
+tile.betons.yellow_beton.name=Yellow Concrete
+tile.betons.yellow_beton_crack.name=Peeling Yellow Concrete
