--- a/src/main/resources/assets/soviet/lang/ru_ru.lang
+++ b/src/main/resources/assets/soviet/lang/ru_ru.lang
@@ -328,7 +328,7 @@ tile.sh.name=Символ:"Ш"
 tile.ue.name=Символ:"Э"
 tile.d.name=Символ:"Д"
 tile.uy.name=Символ:"Ю"
-tile.e.name=Символ:"Ы"
+tile.e.name=Символ:"Е"
 tile.ch.name=Символ:"Ш"
 tile.b.name=Символ:"Б"
 tile.c.name=Символ:"Ц"
@@ -381,3 +381,34 @@ tile.bio/vent_pipe2_base.name=Вытяжка
 tile.req/short_bricks.name=Светлые кирпичи
 tile.betons.yellow_beton.name=Жёлтый железобетон
 tile.betons.yellow_beton_crack.name=Жёлтый потрескавшийся железобетон
+tile.bio/horiz_tile_blue.name=Горизонтальная голубая плитка
+tile.bio/horiz_tile_blue_crack.name=Обколотая горизонтальная голубая плитка
+tile.bio/horiz_tile_white.name=Горизонтальная белая плитка
+tile.brown_tilled_block.name=Коричневая кафельная плитка
+tile.linos.lino1.name=Линолеум с узором №1
+tile.linos.lino3.name=Линолеум с узором №2
+tile.linos.lino2.name=Красный линолеум
+tile.linos.lino4.name=Бирюзовый линолеум
+tile.linos.lino5.name=Коричневый линолеум
+tile.linos.lino6.name=Синий линолеум
+tile.linos.lino7.name=Серо-белый линолеум
+tile.linos.lino8.name=Зеленый линолеум
+tile.bio/bio_stil.name=Стеллаж для культур
+tile.bio/cryocapsule.name=Герметичное криохранилище
+tile.bio/rotamixer.name=Круговая мешалка
+tile.bio/lab_sink.name=Микробиологическая раковина
+tile.bio/biolab_table2.name=Микробиологический стол с голубым покрытием
+tile.bio/biolab_table3.name=Микробиологический стол с нержавеющим покрытием
+tile.bio/biolab_table4.name=Ящик микробиологического стола
+tile.bio/biolab_chair.name=Лабораторный стул
+tile.bio/biolab_tumbler.name=Тумблер питания
+tile.bio/biolab_power_socket.name=Розетка
+tile.bio/radiator.name=Охлаждающий радиатор
+tile.bio/autoclave2.name=Лабораторный автоклав
+tile.bio/chain.name=Цепь
+tile.bio/dress_room_down.name=Разделительная переодевалка
+tile.bio/dress_room_up.name=Разделительная переодевалка
+tile.bio/vent_circle.name=Общая лабораторная вытяжка
+tile.bio/vent_filter.name=Микробиологическая вытяжка с фильтром
+tile.bio/diff_lamp.name=Лабораторная лампа с диффузором
+tile.bio/diff_lamp_true.name=Лабораторная лампа с диффузором
